--- a/code-kookmin/package.json
+++ b/code-kookmin/package.json
@@ -9,10 +9,12 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@material-ui/core": "^4.12.4",
+        "@mui/system": "^5.15.11",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/material-ui": "^0.21.17",
         "@types/node": "^16.18.68",
         "@types/quill": "^2.0.14",
         "@types/react": "^18.2.45",
